# awesome-cursorrules

./: .coverage  .cursorignore  .cursorrules  .cursorrules.2025-01-11T04-57-00-708Z.backup  .cursorrules.2025-01-11T05-06-52-408Z.backup  .cursorrules.2025-01-11T05-07-25-898Z.backup  .cursorrules.backup  .gitignore  CURSOR_RULES_DYNAMIC.md  INSTALL.md  README.md  RELEASE.md  SUPPORTED_LANGUAGES.md  code-of-conduct.md  contributing.md  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg
.cursorrules-backup/: .cursorrules.2025-01-13T15-21-37-594Z.backup  .cursorrules.2025-01-13T15-42-17-218Z.backup
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-template.md
custom_rules/: fastapi.mdc  guidelines.mdc  pr.mdc
examples/: demo.py
rules/: ai-agent-skills-framework.mdc  ai-agent-specialist.mdc  ai-coding-agent-baseline.mdc  alpha-skills-quant-factor-research.mdc  ankra-cli.mdc  (+268 more)
rules-new/: ankra-cli.mdc  anti-overengineering.mdc  beefreeSDK.mdc  clean-code.mdc  codequality.mdc  cpp.mdc  database.mdc  docker.mdc  embedded-stm32-hal.mdc  fastapi.mdc  fortran.mdc  gitflow.mdc  go.mdc  kubestellar-console.mdc  medusa.mdc  moyu.mdc  nativescript.mdc  nextjs-tanstack-query.mdc  nextjs.mdc  node-express.mdc  osop-session-logging.mdc  postgresql.mdc  python.mdc  react.mdc  ros-ros2.mdc  rust.mdc  shopify-theme-dev-liquid.mdc  solana-wallet-aware.mdc  svelte.mdc  tailwind.mdc  tanstack-query.mdc  tanstack-start.mdc  typescript.mdc  vercel-deployment.mdc  vue.mdc
(+1482 files in other folders)
