[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-rules-dynamic"
version = "0.1.0"
description = "Dynamic .cursorrules file analyzer and generator"
readme = "README.md"
requires-python = ">=3.8"
license = "CC0-1.0"
keywords = ["cursor", "ide", "rules", "dynamic"]
authors = [
    { name = "Garot Conklin", email = "garotconklin@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "watchdog>=2.1.0",
    "astroid>=2.14.0",  # For Python code analysis
    "esprima>=4.0.1",   # For JavaScript/TypeScript parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 